# legged_motion_planner

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/legged_motion_planner/: Agent.hpp  CentroidalNLP.hpp  NumericalIntegrationConstraints.hpp  class_csv.h  labels.h
include/motion_planner/: Agent.hpp  MotionNLP.hpp
records/: .~lock.DesiredTrajectory3.csv#  DesiredTrajectory.csv  DesiredTrajectory00.csv  DesiredTrajectory002.csv  DesiredTrajectory01.csv  DesiredTrajectory012.csv  DesiredTrajectory100.csv  DesiredTrajectory200.csv  DesiredTrajectory3.csv  DesiredTrajectory50_100.csv  DesiredTrajectory_0_100.csv  labels.txt
results/: solution.csv
src/: Agent.cpp  CentroidalNLP.cpp  CentroidalNLP_in_double_support.cpp  CentroidalNLP_without_k_timeopt_init.cpp  CentroidalNLP_withzerosinJacs.cpp  MotionNLP.cpp  NumericalIntegrationConstraints.cpp  ipopt.opt  ipopt.out  main.cpp  polt_solution_double_support_k_legged.py  polt_solution_k_legged.py  test_problem.cpp
useless_versions_ofNLP/: CentroidalNLP_playing_k1.cpp
